--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 
-
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -20,7 +19,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.https://stackoverflow.com/questions/29878370/first-run-of-android-studio-unable-to-access-android-sdk-add-on-listjar'])
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
@@ -35,8 +34,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:27.1.1'
     //add firebase
-    implementation 'com.google.firebase:firebase-core:16.0.1'
-    //circle image viewwer
+    implementation 'com.google.firebase:firebase-core:16.0.1'    //circle image viewwer
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     //add image cropper library
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
